# vasalytics-app

./: README.md  Sammanfattning.py  pyproject.toml  utils.py
data/: mean_by_year.pkl
pages/: Per år.py
